--- a/index.html
+++ b/index.html
@@ -20,23 +20,62 @@
 <body>
 
     <header>
-<nav>
-<div class="logo" style="display: flex;">
-<img src="logo.png" alt="" style="height: 40px;">
-<h1 class="logoname">
-   <span style="color: #FF42A5;">G</span>amer</h1></div>
-   <ul>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Developers</a></li>
-    <li class="follow-us"><a href="#">Follow Us On <span class="icons"><i class="fa fa-youtube-play"
-        style="color:red"></i></span> </a></li>
-    </ul>
+        <nav>
+            <div class="logo" style="display: flex;">
+                <img src="logo.png" alt="" style="height: 40px;">
+                <h1 class="logoname">
+                    <span style="color: #FF42A5;">G</span>amer
+                </h1>
+            </div>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Developers</a></li>
+                <li class="follow-us"><a href="#">Follow Us On <span class="icons"><i class="fa fa-youtube-play"
+                                style="color:red"></i></span> </a></li>
+            </ul>
 
-</nav>
+        </nav>
 
 
 
     </header>
+
+    <main>
+
+        <section class="banner">
+
+            <div class="left-side">
+                <div class="banner-content">
+                    <h2>PLAY LIKE THE</h2>
+                    <h1>G.O.A.T.</h1>
+                    <ul>
+                        <li style="margin-left: -148px;">1-Click instant play</li>
+                        <li style=" margin-left: -205px;">No Download</li>
+                        <li style="margin-left: -13px;">1000s of supported online games</li>
+                    </ul>
+
+                    <button class="btn-primary"> SING IN</button><button class="btn-2nd" style=" margin-left: 20px; ">GO
+                        ROUGE
+                    </button>
+
+                </div>
+            </div>
+
+            <div class="right-side">
+                <img src="Group 18.png" alt="" class="right-img">
+            </div>
+        </section>
+
+
+
+
+
+    </main>
+
+
+    <footer>
+
+    </footer>
 
 
 </body>
