This push is for Confirmation check.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="Rectangle 4.png" alt="">
                        <div class="ajax">
                         <i class="fa-solid fa-circle-play" style="margin-left: 40px;"></i><br />
-                        <p class="watch-now" style="color: aliceblue;">Watch Now</p>
+                        <p class="watch-now">Watch Now</p>
                        </div>
                     </div>
                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
@@ -93,7 +93,7 @@
                         <img src="Rectangle 5.png" alt="">
                        <div class="ajax">
                         <i class="fa-solid fa-circle-play" style="margin-left: 40px;"></i><br />
-                        <p class="watch-now" style="color: aliceblue;">Watch Now</p>
+                        <p class="watch-now">Watch Now</p>
                        </div>
                     </div>
                    <p>Did you score? #unblockedgames #school</p>
@@ -104,7 +104,7 @@
                         <img src="Rectangle 6.png" alt="">
                        <div class="ajax">
                         <i class="fa-solid fa-circle-play" style="margin-left: 40px;"></i><br />
-                        <p class="watch-now" style="color: aliceblue;">Watch Now</p>
+                        <p class="watch-now">Watch Now</p>
                        </div>
                     </div>
                    <p>Breaking game records like OG</p>
@@ -115,7 +115,7 @@
                         <img src="Rectangle 7.png" alt="">
                        <div class="ajax">
                         <i class="fa-solid fa-circle-play" style="margin-left: 40px;"></i><br />
-                        <p class="watch-now" style="color: aliceblue;">Watch Now</p>
+                        <p class="watch-now">Watch Now</p>
                        </div>
                     </div>
                    <p>Busted gaming on school laptop, but you are still lit.</p>
@@ -199,12 +199,12 @@
 </div>
 <div class="footer-menu">
     <ul>
-        <li>Our Story</li>
-        <li>Games</li>
-        <li>Web Games</li>
-        <li>Careers</li>
-        <li>Support</li>
-        <li>My Account</li>
+        <li><a href="">Our Story</a></li>
+        <li><a href="">Games</a></li>
+        <li><a href="">Web Games</a></li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">My Account</a></li>
     </ul>
 </div>
 
@@ -217,11 +217,14 @@
 </div>
 <div class="terms">
     <ul>
-        <li>Our Story</li>
-        <li>Games</li>
+        <li><a href="#">Our Story</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="#">Web Games</a></li>
+        <li><a href="#">Careers</a></li>
     </ul>
-     <ul>  <li>Web Games</li>
-        <li>Careers</li></ul> 
+    
+    <ul> </ul> 
+     
   
 </div>
 <div class="copyright"><p> @2020-2023 Gamer.com All rights reserved By Md.Asiful Islam</p></div>
